--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -1,6 +1,7 @@
 html,
 body {
 	height: 100%;
+	font-family: 'Montserrat', sans-serif;
 }
 
 .wrapper {
@@ -17,12 +18,15 @@ body {
 }
 
 .container{
-  max-width: 1200px;
+  max-width: 1320px;
   margin: 0 auto;
   padding: 0 15px;
 }
 
 
-
+.container-fluid{
+	max-width: 1920px;
+	margin: 0 auto;
+  }
 
 
