--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -30,3 +30,55 @@ body {
   }
 
 
+.select {
+	height: 20px;
+	width: 45px;
+}
+.select__header {
+	display: flex;
+	max-width: 45px;
+	position: relative;
+	cursor: pointer;
+}
+.select__curent {
+	padding-left: 4px;
+	@extend%m-600;
+	font-size: 16px;
+	line-height: 20px;
+	color: #fff;
+}
+.select__icon {
+	transform: rotate(0);
+	transition: all .3s;
+	margin-top: -2px;
+	margin-left: 5px;
+}
+.select__body {
+	@extend%m-600;
+	background: #F3F3F3;
+	box-shadow: 3px 4px 5px rgba(0, 0, 0, 0.25);
+	border-radius: 5px;
+	padding: 5px;
+	text-align: center;
+	display: none;
+}
+.select__item {
+	padding: 5px 5px 0 5px;
+	font-size: 16px;
+	line-height: 20px;
+	color: #000;
+	cursor: pointer;
+	&:last-child{
+		padding-bottom: 5px;
+	}
+}
+.select.active .select__body {
+	display: block;
+}
+
+.select.active .select__icon {
+	transform: rotate(180deg);
+}
+.select.mobile{
+	display: none;
+}
